cluster/apps/kube-system/dashboard/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`k8s.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: https
          scheme: https
      middlewares:
        - name: rfc1918
          namespace: network
  tls:
    secretName: "k8s-${SECRET_DOMAIN/./-}-tls"
